# prometheus

./: .gitattributes  .gitignore  CMakeLists.txt  README.fr.md  README.md  build.bat  deceive_config.json  prometheus_config.json  rocketsimcpu.bat  run.bat  run_agent.bat  run_gui.bat  run_render.bat  transferlearn.bat
GigaLearnCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/: CMakeLists.txt
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ActionParsers/: ActionParser.h  DefaultContinuousAction.h  StallAction.cpp  StallAction.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/EnvSet/: EnvSet.cpp  EnvSet.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Gamestates/: GameState.cpp  GameState.h  Player.cpp  Player.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/ObsBuilders/: AdvancedObsPadded.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/Rewards/: AllRewards.h  CommonRewards.h  RippleRewards.h  mkh_rewards.h  morerewards.h
GigaLearnCPP/RLGymCPP/src/RLGymCPP/StateSetters/: CombinedState.h  UnlimitedBoostState.cpp  UnlimitedBoostState.h
GigaLearnCPP/src/private/GigaLearnCPP/: PolicyVersionManager.cpp  PolicyVersionManager.h
GigaLearnCPP/src/private/GigaLearnCPP/PPO/: ExperienceBuffer.cpp  GAE.cpp  PPOLearner.cpp  PPOLearner.h
GigaLearnCPP/src/private/GigaLearnCPP/Util/: AttentionModel.cpp  AttentionModel.h  Models.h
GigaLearnCPP/src/public/GigaLearnCPP/: Learner.cpp  Learner.h  LearnerConfig.h
GigaLearnCPP/src/public/GigaLearnCPP/PPO/: PPOLearnerConfig.h  TransferLearnConfig.h
GigaLearnCPP/src/public/GigaLearnCPP/Util/: InferUnit.cpp  InferUnit.h
RocketSimCuda/: CMakeLists.txt
RocketSimCuda/include/: RocketSimCuda.h  RocketSimCudaTraining.h
RocketSimCuda/src/: BulletSolver.cuh  CarPhysics.cuh  Collision.cuh  CudaMath.cuh  GAECuda.cu  GpuTypes.cuh  MeshCollision.cuh  RocketSimCuda.cu  TrainingObs.cuh
RocketSimCuda/tests/: benchmark_1024.cpp  benchmark_env_pipeline.cpp  compare_cpu_cuda.cpp  cpu_parity_harness.cpp  cuda_host_shim.cuh  run_cpu_parity.sh  test_gae_parity.cpp  test_gamestate_cuda.cpp  test_physics.cpp  trace_divergence.cpp
RocketSimCuda/tests/reports/: cpu_parity_report.csv  cpu_parity_report.json  cpu_parity_report.txt
src/: ExampleMain.cpp
src/gui/: GuiApp.cpp  GuiApp.h  GuiMain.cpp
tools/: prometheus_env.bat
